--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -85,9 +85,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Newberg FTC - 6712"
         android:id="@+id/newbergLogo"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textColor="#ffffff"/>
+        android:textColor="#ffffff"
+        android:layout_alignBottom="@+id/menu_buttons"
+        android:layout_centerHorizontal="true" />
 
   </RelativeLayout>
   <!-- end of black bar -->
