Tweaked the activity layout

--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -82,10 +82,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="@style/?android:attr/textAppearanceMedium"
         android:text="Newberg FTC - 6712"
         android:id="@+id/newbergLogo"
-        android:textColor="#ffffff"
         android:layout_alignBottom="@+id/menu_buttons"
         android:layout_centerHorizontal="true" />
 
