--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -118,36 +118,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:visibility="invisible"
       android:text="" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textOpMode"
-        android:layout_above="@+id/textGamepad1"
-        android:id="@+id/frameLayout">
-
-      <LinearLayout
-          android:id="@+id/cameraMonitorViewId"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:orientation="vertical"
-          />
-
-      <!-- When visible, the error message will overlay and thus partially
-           obscure part of the camera monitor. We make this trade off so as to
-           allow for a bigger camera monitor view in the common case when the
-           error is not in fact present
-        -->
-        <TextView
-            android:id="@+id/textErrorMessage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:visibility="invisible"
-            android:textColor="#990000"
-            android:textStyle="bold"/>
-
-    </FrameLayout>
-
     <TextView
       android:id="@+id/textGamepad1"
       android:layout_width="match_parent"
@@ -176,6 +146,67 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         android:visibility="invisible"
         android:text=""
         android:layout_alignBottom="@+id/frameLayout"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/frameLayout"
+        android:layout_alignStart="@+id/frameLayout2"
+        android:layout_marginStart="70dp">
+
+      <FrameLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent">
+
+      </FrameLayout>
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/frameLayout"
+        android:layout_below="@+id/textRobotStatus"
+        android:layout_alignParentStart="true">
+
+      <LinearLayout
+          android:id="@+id/cameraMonitorViewId"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:orientation="vertical"
+          >
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/textOpMode"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="105dp">
+
+          <SurfaceView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/surfaceView"
+              android:layout_below="@+id/textOpMode"
+              android:layout_above="@+id/textGamepad1"/>
+        </FrameLayout>
+      </LinearLayout>
+
+      <!-- When visible, the error message will overlay and thus partially
+           obscure part of the camera monitor. We make this trade off so as to
+           allow for a bigger camera monitor view in the common case when the
+           error is not in fact present
+        -->
+        <TextView
+            android:id="@+id/textErrorMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:visibility="invisible"
+            android:textColor="#990000"
+            android:textStyle="bold"/>
+
+    </FrameLayout>
 
   </RelativeLayout>
 
